# atomic_sovus

./: .gitignore  Dockerfile  README.md  app.py  mypy.ini  pyproject.toml
atomic_sovus/: chain.py  preprocess.py  retrievers.py  settings.py
notebooks/: make_index.ipynb  parse_pdf.ipynb  titles_all.json
pages/: 1_manuals.py  2_faqs.py
scripts/: download_models.py
ответы/: submission.xlsx
